[package]
name = "runer"
version = "0.1.0"
edition = "2021"

[package.metadata]
author = "itwasneo <https://github.com/itwasneo>"
about = "Keep Calm and Automatize Everything"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "runer"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
debug = false
debug-assertions = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.13", features = ["yaml"] }
env_logger = "0.10"
gtk4 = "0.7"
gdk4 = "0.7"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
smol = "1.3"
